0.47
 - Update copyright years.

0.46 2016-06-27T11:37:25+02:00
 - Update Map::Tube to 3.15 version.
 - Update Map::Tube::CLI to 0.18 version.
 - Update Map::Tube::Plugin::Formatter to 0.09 version.
 - Update Map::Tube::Plugin::Graph to 0.20 version.
 - Update Task::Map::Tube::Metro to 0.12 version.
 - Update Test::Map::Tube to 0.17 version.

0.45 2016-04-04T15:14:00+02:00
 - Rename LICENSE.artistic_2 to LICENSE file.
 - Update Map::Tube::CLI to 0.17 version.
 - Update Task::Map::Tube::Metro to 0.11 version.
 - Update copyright years.

0.44 2015-11-27T14:08:21+01:00
 - Update Map::Tube::CLI to 0.15 version.
 - Update Map::Tube::Cookbook to 0.03 version.
 - Update Task::Map::Tube::Metro to 0.09 version.

0.43 2015-11-03T23:05:13+01:00
 - Add Map::Tube::Cookbook 0.02 version.
 - Update Map::Tube to 3.12 version.
 - Update Map::Tube::Exception to 3.06 version.
 - Update Test::Map::Tube to 0.14 version.

0.42 2015-10-19T07:26:22+02:00
 - Fix author requires.
 - Update Map::Tube to 3.07 version.
 - Update Map::Tube::Exception to 3.05 version.
 - Update Map::Tube::Graph to 0.05 version.
 - Update Task::Map::Tube::Metro to 0.08 version.
 - Update Test::Map::Tube to 0.10 version.

0.41 2015-09-27T18:13:27+02:00
 - Update Task::Map::Tube::Metro to 0.05 version.
 - Update Test::Map::Tube to 0.08 version.

0.40 2015-09-21T22:40:30+02:00
 - Add Map::Tube::Exception 3.03 version.
 - Move author tests to xt/ directory.
 - Update Map::Tube to 3.01 version.
 - Update Map::Tube::CLI to 0.13 version.
 - Update Map::Tube::Plugin::Formatter to 0.08 version.
 - Update Map::Tube::Plugin::Graph to 0.19 version.
 - Update Task::Map::Tube::Metro to 0.04 version.

0.39 2015-09-07T13:54:05+02:00
 - Improve SEE ALSO section in doc.
 - Update Map::Tube::CLI to 0.11 version.
 - Update README.
 - Update Task::Map::Tube::Metro to 0.03 version.

0.38 2015-08-25T22:39:09+02:00
 - Update Map::Tube::CLI to 0.10 version.
 - Update Task::Map::Tube::Metro to 0.02 version.

0.37 2015-08-07T17:35:06+02:00