@@ -1,4 +1,5 @@
 0.47
+ - Update Module::Install to 1.21 version.
  - Update copyright years.
 
 0.46 2016-06-27T11:37:25+02:00
